# youtube2overview

./: .gitignore  README.md
.githooks/: post-commit
app/: Package.swift
app/Sources/yt2overview/: AppCommands.swift  AppModel.swift  BackendClient.swift  ContentView.swift  HistoryStore.swift  HistoryView.swift  MicaBackground.swift  Models.swift  Provisioner.swift  ResultsView.swift  SettingsView.swift  Theme.swift  YT2OverviewApp.swift
backend/: Cargo.toml
backend/src/: api.rs  config.rs  error.rs  main.rs  mlx.rs  model.rs  state.rs  tools.rs
backend/src/pipeline/: assemble.rs  frames.rs  infer.rs  mod.rs  probe.rs  transcribe.rs  ytdlp.rs
scripts/: Info.plist  build.sh  install-git-hooks.sh  make_icon.swift  package.sh  release.sh
