[package]
name = "yt2overview-backend"
version = "0.1.0"
edition = "2021"
description = "Rust backend for yt2overview: orchestrates yt-dlp, ffmpeg and rapid-mlx (Gemma 4)."

[[bin]]
name = "yt2overview-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
dashmap = "6"
which = "6"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
